--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,9 @@ jobs:
         with:
           TEST: true
           PACK: false
+      - name: Setup Node.js
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 12
+      - name: Build and push
+        uses: alexthemaster/action-build-typescript@v.
