--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           node-version: 12
       - name: Build and push
-        uses: alexthemaster/action-build-typescript@v.
+        uses: alexthemaster/action-build-typescript@v.1.2.1
